# cg-billboard-rain

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: fragment.glsl  vertex.glsl
assets/shaders/billboard/: fragment.glsl  vertex.glsl
assets/shaders/ground/: vertex.glsl
assets/shaders/tree/: fragment.glsl  vertex.glsl
docs/report/: referencias.bib  report.tex
docs/report/chapters/: 01_introduccion.tex  02_objetivos.tex  03_fundamento_teorico.tex  04_arquitectura.tex  05_implementacion.tex  06_resultados.tex  07_conclusiones.tex  08_trabajo_futuro.tex
src/: CMakeLists.txt  main.cpp
src/audio/: AudioManager.cpp  AudioManager.h
src/core/: Application.cpp  Application.h  CMakeLists.txt  Renderer.cpp  Renderer.h  Timer.cpp  Timer.h  Window.cpp  Window.h
src/graphics/: Camera.cpp  Camera.h  GroundMesh.cpp  GroundMesh.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  QuadMesh.cpp  QuadMesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h
src/gui/: CMakeLists.txt  GuiManager.cpp  GuiManager.h
src/particles/: CMakeLists.txt  ParticleEmitter.cpp  ParticleEmitter.h  RainParticle.cpp  RainParticle.h  RainResources.cpp  RainResources.h  RainSystem.cpp  RainSystem.h
src/resources/: Resources.cpp  Resources.h
src/scene/: Billboard.cpp  Billboard.h  CMakeLists.txt  Ground.cpp  Ground.h  GroundResources.cpp  GroundResources.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Transform.cpp  Transform.h  Tree.cpp  Tree.h  TreeResources.cpp  TreeResources.h  TreeSystem.cpp  TreeSystem.h
src/weather/: LightingSystem.cpp  LightingSystem.h  WeatherSystem.cpp  WeatherSystem.h
